<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/app_title"
                style="@style/myStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"
                android:paddingBottom="10dp"
                android:text="@string/app_name"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/title_input_label"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/title_input_group"
                app:layout_constraintTop_toBottomOf="@+id/app_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_input_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_input_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/description_input_label"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/title_input_group" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_input_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/description_input_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/brand_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/brand_input_label"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/description_input_group" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/brand_input_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/brand_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/brand_input_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/category_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/category_input_label"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/brand_input_group" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/category_input_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_input_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/image_content_description"
                android:scaleType="centerCrop"
                android:src="@drawable/angus_beef"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category_input_group" />

            <TextView
                android:id="@+id/image_reference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/image_reference"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_image" />

            <TextView
                android:id="@+id/set_date_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/date_input_label"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/image_reference" />

            <TextView
                android:id="@+id/expiry_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/expiry_date_input_label"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/set_date_label" />

            <TextView
                android:id="@+id/remainder_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/reminder_date_input_label"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@+id/expiry_date_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/expiry_date_label"
                app:layout_constraintTop_toTopOf="@+id/expiry_date_label" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/expiry_date_input_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/expiry_date_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expiry_date_input_text"
                    android:textSize="11sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reminder_date_input_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintStart_toStartOf="@+id/remainder_date_label"
                app:layout_constraintTop_toBottomOf="@+id/remainder_date_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reminder_date_input_text"
                    android:textSize="11sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save_button"
                style="@style/myStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/save_button"
                app:backgroundTint="@color/primary"
                app:cornerRadius="15dp"
                app:layout_constraintTop_toBottomOf="@id/reminder_date_input_group" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>